# learning_llvm

./: .gitignore  README.md
part_1/: README.md  func_lister.cpp  run.sh  test.c
part_2/: README.md
part_2/CfgDfs/: main.cpp  run.sh  test.c
part_2/CountBasicBlocks/: main.cpp  test.c
part_2/DetectRecursion/: Dockerfile  main.cpp  test.c
part_2/GlobalVariables/: main.cpp
part_2/UnusedGlobalVariables/: main.cpp  test.c
part_3/: CMakeLists.txt  code.txt  main  main.cpp
